force-app/main/default/objects/Invoice_Enpoint__mdt/Invoice_Enpoint__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Enpoint</label>
    <pluralLabel>Invoice Enpoints</pluralLabel>
</CustomObject>