force-app/main/default/objects/Invoice_Enpoint__mdt/fields/DN_Account__c.field-meta.xml
<CustomField>
    <fullName>DN_Account__c</fullName>
    <label>DN Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>