force-app/main/default/objects/Invoice_Enpoint__mdt/fields/DN_Account_Pass__c.field-meta.xml
<CustomField>
    <fullName>DN_Account_Pass__c</fullName>
    <label>DN Account Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>