force-app/main/default/objects/Invoice_Enpoint__mdt/fields/DN_Employee_Bike_Serial__c.field-meta.xml
<CustomField>
    <fullName>DN_Employee_Bike_Serial__c</fullName>
    <label>DN Employee Bike Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>