force-app/main/default/objects/Invoice_Enpoint__mdt/fields/DN_Enpoint__c.field-meta.xml
<CustomField>
    <fullName>DN_Enpoint__c</fullName>
    <label>DN Enpoint</label>
    <type>Url</type>
</CustomField>