force-app/main/default/objects/Invoice_Enpoint__mdt/fields/DN_User__c.field-meta.xml
<CustomField>
    <fullName>DN_User__c</fullName>
    <label>DN User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>