force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Account__c.field-meta.xml
<CustomField>
    <fullName>HCM_Account__c</fullName>
    <label>HCM Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>