force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Account_Pass__c.field-meta.xml
<CustomField>
    <fullName>HCM_Account_Pass__c</fullName>
    <label>HCM Account Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>