force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Bike_Pattern__c.field-meta.xml
<CustomField>
    <fullName>HCM_Bike_Pattern__c</fullName>
    <label>HCM Bike Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>