force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Employee_Bike_Pattern__c.field-meta.xml
<CustomField>
    <fullName>HCM_Employee_Bike_Pattern__c</fullName>
    <description>Order.Is_Employee__c = True</description>
    <label>HCM Employee Bike Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>