force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Employee_Bike_Serial__c.field-meta.xml
<CustomField>
    <fullName>HCM_Employee_Bike_Serial__c</fullName>
    <description>Orer.Is_Employee__c = True</description>
    <label>HCM Employee Bike Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>