force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>HCM_Endpoint__c</fullName>
    <label>HCM Endpoint</label>
    <type>Url</type>
</CustomField>