force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_Serial__c.field-meta.xml
<CustomField>
    <fullName>HCM_Serial__c</fullName>
    <label>HCM Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>