force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HCM_User__c.field-meta.xml
<CustomField>
    <fullName>HCM_User__c</fullName>
    <label>HCM User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>