force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_Account__c.field-meta.xml
<CustomField>
    <fullName>HN_Account__c</fullName>
    <label>HN Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>