force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_Account_Pass__c.field-meta.xml
<CustomField>
    <fullName>HN_Account_Pass__c</fullName>
    <label>HN Account Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>