force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_Employee_Bike_Serial__c.field-meta.xml
<CustomField>
    <fullName>HN_Employee_Bike_Serial__c</fullName>
    <description>Order.Is_Employee__c = True</description>
    <label>HN Employee Bike Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>