force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_Employee_Pattern__c.field-meta.xml
<CustomField>
    <fullName>HN_Employee_Pattern__c</fullName>
    <label>HN Employee Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>