force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_Enpoint__c.field-meta.xml
<CustomField>
    <fullName>HN_Enpoint__c</fullName>
    <label>HN Enpoint</label>
    <type>Url</type>
</CustomField>