force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_Serial__c.field-meta.xml
<CustomField>
    <fullName>HN_Serial__c</fullName>
    <label>HN Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>