force-app/main/default/objects/Invoice_Enpoint__mdt/fields/HN_User__c.field-meta.xml
<CustomField>
    <fullName>HN_User__c</fullName>
    <label>HN User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>