force-app/main/default/objects/Invoice_Enpoint__mdt/fields/NT_Account__c.field-meta.xml
<CustomField>
    <fullName>NT_Account__c</fullName>
    <label>NT Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>