force-app/main/default/objects/Invoice_Enpoint__mdt/fields/NT_Account_Pass__c.field-meta.xml
<CustomField>
    <fullName>NT_Account_Pass__c</fullName>
    <label>NT Account Pass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>