force-app/main/default/objects/Invoice_Enpoint__mdt/fields/NT_Bike_Serial__c.field-meta.xml
<CustomField>
    <fullName>NT_Bike_Serial__c</fullName>
    <label>NT Bike Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>