force-app/main/default/objects/Invoice_Enpoint__mdt/fields/NT_Enpoint__c.field-meta.xml
<CustomField>
    <fullName>NT_Enpoint__c</fullName>
    <label>NT Enpoint</label>
    <type>Url</type>
</CustomField>