force-app/main/default/objects/Invoice_Enpoint__mdt/fields/NT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>NT_Pattern__c</fullName>
    <label>NT Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>