force-app/main/default/objects/Invoice_Enpoint__mdt/fields/NT_User__c.field-meta.xml
<CustomField>
    <fullName>NT_User__c</fullName>
    <label>NT User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>